- fixed : card are now aligned horizontally perfecly'

--- a/public/sass/_state.scss
+++ b/public/sass/_state.scss
@@ -71,7 +71,7 @@
     &.back {
         position: absolute;
         top: 0;
-        left: 0;
+        left: 18px;
         @include transform(rotateY(180deg));
     }
 }
